<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>osracer_aggressive_backup</name>
  <version>0.1.0</version>
  <description>Nav2 behavior plugin that backs up aggressively without costmap collision checks.</description>
  <maintainer email="kitso@osrbot.com">kitso666</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>nav2_behaviors</depend>
  <depend>nav2_core</depend>
  <depend>nav2_msgs</depend>
  <depend>nav2_util</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <nav2_core plugin="${prefix}/osracer_aggressive_backup.xml" />
  </export>
</package>
